es_out: reset output clock after flush is processed

Refs #25694